<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_cust"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:text="@string/yourpoint"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/level"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_cust"
        android:text="@string/level" />

    <TextView
        android:id="@+id/num_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/et_cust"
        android:padding="5dp"
        android:text="@string/point" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:padding="20dp"
        android:background="@drawable/et_cust"
        android:text="@string/question" />

    <TextView
        android:id="@+id/ans1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/question"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_cust"
        android:padding="5dp"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:text="@string/ans1" />

    <TextView
        android:id="@+id/ans2"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ans1"
        android:background="@drawable/et_cust"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/ans2" />

    <TextView
        android:id="@+id/ans3"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ans2"
        android:background="@drawable/et_cust"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/ans3" />

    <TextView
        android:id="@+id/ans4"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ans3"
        android:background="@drawable/et_cust"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/ans4" />

</RelativeLayout>